# deploy_project_1

./: README.md  pyproject.toml
src/deploy_project/: main.py
