[project]
name = "deploy_project"
version = "0.1.0"
description = "deploy_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
]

[project.scripts]
kickoff = "deploy_project.main:kickoff"
run_crew="deploy_project.main:kickoff"
plot = "deploy_project.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
